# gpt-cli-howto

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build-deb-in-docker.sh  build-packages-in-docker.sh  go.mod  go.sum  main.go
.github/workflows/: go.yml  release.yml
cmd/: config.go  defaults.go  root.go
debian/: changelog  control  install
src/: config.rs  main.rs  query.rs
